--- a/project.config.json
+++ b/project.config.json
@@ -1,14 +1,17 @@
 {
 	"description": "项目配置文件",
+  "cloudfunctionRoot":'cloudfunctions/',
 	"packOptions": {
 		"ignore": []
 	},
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
+		"enhance": true,
 		"postcss": true,
-		"minified": true,
+		"minified": false,
 		"newFeature": true,
+		"nodeModules": true,
 		"autoAudits": false,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
@@ -17,11 +20,10 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		},
-		"nodeModules": true
+		}
 	},
 	"qcloudRoot": "server/",
-	"compileType": "plugin",
+	"compileType": "miniprogram",
 	"libVersion": "2.4.4",
 	"appid": "wx3de1328029c36c8f",
 	"projectname": "%E6%89%8B%E6%9C%BA%E7%AB%AF%E8%BF%90%E5%8C%96",
